--- a/src/stylesheets/_common.scss
+++ b/src/stylesheets/_common.scss
@@ -1,4 +1,4 @@
-html,body,#App{
+html,body,#app{
   font-family: Arial,Helvetica,sans-serif,'Lucida Grande',Verdana;
   word-wrap: break-word;
   line-height: 1;
